--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "sass": "^1.80.6",
     "vue": "^3.5.12"
