--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite deploy && firebase deploy",
+    "fblogin": "firebase login"
   },
   "dependencies": {
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.0.2",
     "sass": "^1.80.6",
     "vue": "^3.5.12"
   },
